Fixed image size on mobile

--- a/src/styles/component/_posts.scss
+++ b/src/styles/component/_posts.scss
@@ -1,3 +1,7 @@
+img {
+  height: auto;
+}
+
 .single-post-image {
   max-width: 100%;
   height: auto;
